Fixed image overflow issue and page height

--- a/style.css
+++ b/style.css
@@ -32,11 +32,16 @@
 
 body{
     background: var(--yellow);
-    margin: auto;
-    font-family: figtree;
-    height: 100vh;
+}
+
+/* used the main tag as the parent container */
+main{
+    padding-block: 20px;
     align-items: center;
-    font-size: var(--prgh-font);
+    min-height: 100vh;
+    font-family: figtree;
+    font-size: var(--prgh-font); 
+    /* border: 20px solid;  */
 }
 
 .wrapper{
@@ -46,47 +51,49 @@ body{
     border: 2px solid black;
     border-radius: 20px;
     box-shadow: 9px 8px 0px -1.2px var(--Black-color);
-    max-width: 400px;
+    max-width: 27rem;
 }
 
 .wrapper .imgContainer {
     padding-block: 0 1.25rem;
-    img{
-        width: 100%;
-        border-radius: 10px;
-        /* margin-bottom: 10px; */
-    }
+}
+/* Fixed image overflow issue on older browser version by 
+creating it's rule, rather than nesting the img rule in parent
+rule.
+ */
+.wrapper .imgContainer img{
+    width: 100%;
+    border-radius: 10px;
+    /* margin-bottom: 10px; */
 }
 
-.wrapper .content {
-    .category{
-        padding: .25rem 1.25rem;
-        margin-block: 0 0.62rem ;
-        border-radius: 5px;
-        font-weight: 500;
-        width: fit-content;
-        background: var(--yellow);
-    }
+.wrapper .content .category{
+    padding: .25rem 1.25rem;
+    margin-block: 0 0.62rem ;
+    border-radius: 5px;
+    font-weight: 500;
+    width: fit-content;
+    background: var(--yellow);
+}
 
-    h1{
-        font-weight: 800;
-        font-size: 1.5rem;
-        padding-block: 1.25rem;
-    }
+.wrapper .content h1{
+    font-weight: 800;
+    font-size: 1.5rem;
+    padding-block: 1.25rem;
+}
 
-    h1:hover{
-        cursor: pointer;
-        color: var(--yellow);    
-    }
+.wrapper .content  h1:hover{
+    cursor: pointer;
+    color: var(--yellow);    
+}
     
-    p.publishDate{
-        color: black;
-    }
+.wrapper .content p.publishDate{
+    color: black;
+}
 
-    p{
-        color: var(--Grey);
-        line-height: 1.7em;
-    }
+.wrapper .content  p{
+    color: var(--Grey);
+    line-height: 1.7em;
 }
 
 
@@ -98,31 +105,27 @@ body{
     justify-content: flex-start;
     font-weight: 500;
     font-size: 1.1em;
-    
-    img{
-        width: 2.5rem;
-    }
+}
+.wrapper .author img{
+    width: 2.5rem;
 }
 
-@media (min-width: 300px) {
-    body{
-        margin-block: 150px;
+@media (max-width: 425px) {
+    main{
+        padding-block: 50px;
     }
     .wrapper{
-        width: 80%;
+        width: 90%;
         min-width: 295px ;
     }
 
-    .wrapper .content{
-        h1{
-            font-size: 1.35rem;
-            padding-block: 15px;
-        }
-
-        p{
-            font-size: var(--prgh-font);
-            font-size: .8rem;
-        }
+    .wrapper .content h1{
+        font-size: 1.35rem;
+        padding-block: 15px;
+    }
+    .wrapper .content p{
+        font-size: var(--prgh-font);
+        font-size: .8rem;
     }
 
 }
